<?xml version="1.0"?>
<package>
  <name>nao_others</name>
  <version>0.0.1</version>
  <description>Applications for NAO using the NAOqi API based on nao_apps from Vicent Rabaud</description>

  <maintainer email="jocamaba1989@gmail.com">Jose Mayoral</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>humanoid_nav_msgs</run_depend>
  <run_depend>naoqi_bridge</run_depend>
  <run_depend>naoqi_bridge_msgs</run_depend>
  <run_depend>naoqi_driver</run_depend>
  <run_depend>naoqi_driver_py</run_depend>
  <run_depend>naoqi_pose</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <test_depend>trajectory_msgs</test_depend>

</package>
